cmake_minimum_required(VERSION 3.10)
project(chap3)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES app/Pr3-1.cpp app/Pr3-2.cpp app/Pr3-3.cpp app/Pr3-4.cpp
        app/Pr3-5.cpp app/Pr3-6.cpp app/Pr3-7.cpp app/Pr3-8 app/Pr3-9.cpp
        app/Pr3-10.cpp app/Pr3-11.cpp app/Pr3-12.cpp app/Pr3-13 app/Pr3-14.cpp
        app/Pr3-15.cpp app/Pr3-16.cpp app/Pr3-17.cpp app/Pr3-18 app/Pr3-19.cpp
        app/Pr3-20.cpp app/Pr3-21.cpp app/Pr3-22.cpp app/Pr3-23 app/Pr3-24.cpp
        app/Pr3-25.cpp app/Pr3-26.cpp app/Pr3-27.cpp app/Pr3-28)
add_executable(Pr3-1.exe app/Pr3-1.cpp)
add_executable(Pr3-2.exe app/Pr3-2.cpp)
add_executable(Pr3-3.exe app/Pr3-3.cpp)
add_executable(Pr3-4.exe app/Pr3-4.cpp)
add_executable(Pr3-5.exe app/Pr3-5.cpp)
add_executable(Pr3-6.exe app/Pr3-6.cpp)
add_executable(Pr3-7.exe app/Pr3-7.cpp)
add_executable(Pr3-8.exe app/Pr3-8.cpp)
add_executable(Pr3-9.exe app/Pr3-9.cpp)
add_executable(Pr3-10.exe app/Pr3-10.cpp)
add_executable(Pr3-11.exe app/Pr3-11.cpp)
add_executable(Pr3-12.exe app/Pr3-12.cpp)
add_executable(Pr3-13.exe app/Pr3-13.cpp)
add_executable(Pr3-14.exe app/Pr3-14.cpp)
add_executable(Pr3-15.exe app/Pr3-15.cpp)
add_executable(Pr3-16.exe app/Pr3-16.cpp)
add_executable(Pr3-17.exe app/Pr3-17.cpp)
add_executable(Pr3-18.exe app/Pr3-18.cpp)
add_executable(Pr3-19.exe app/Pr3-19.cpp)
add_executable(Pr3-20.exe app/Pr3-20.cpp)
add_executable(Pr3-21.exe app/Pr3-21.cpp)
add_executable(Pr3-22.exe app/Pr3-22.cpp)
add_executable(Pr3-23.exe app/Pr3-23.cpp)
add_executable(Pr3-24.exe app/Pr3-24.cpp)
add_executable(Pr3-25.exe app/Pr3-25.cpp)
add_executable(Pr3-26.exe app/Pr3-26.cpp)
add_executable(Pr3-27.exe app/Pr3-27.cpp)
add_executable(Pr3-28.exe app/Pr3-28.cpp)
